# renovate-bazel-dep

./: MODULE.bazel  README.md
